--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "local": "ng serve --configuration=local",
+    "dev": "ng serve --configuration=development",
     "build": "ng build",
     "build:dev": "ng build --configuration=development",
     "watch": "ng build --watch --configuration development",
