--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@auth0/angular-jwt": "~5.0.2",
+    "autoprefixer": "^10.4.19",
+    "gsap": "^3.12.5",
+    "postcss": "^8.4.38",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -40,7 +43,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "^3.4.3",
     "typescript": "~4.4.3"
   }
 }
