--- a/.github/workflows/deploy_vercel.yml
+++ b/.github/workflows/deploy_vercel.yml
@@ -14,13 +14,14 @@ jobs:
       with:
         # Disabling shallow clone is recommended for improving relevancy of reporting
         fetch-depth: 0
-        args: >
+    - name: SonarCloud Scan
+      uses: sonarsource/sonarcloud-github-action@v2.3.0
+      with:
+         args: >
           -Dsonar.projectKey=jonander-upm_web-laiacano-angular
           -Dsonar.organization=jonander-upm
           -Dsonar.host.url=https://sonarcloud.io
           -Dsonar.login=$SONAR_TOKEN
-    - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@v2.3.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
