--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "sonarqube-scanner": "^4.0.1",
     "tailwindcss": "^3.4.3",
     "typescript": "~4.4.3"
   }
